eyal-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: nginx-deployment
  labels:
    app: eyal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eyal
  template:
    metadata:
      labels:
        app: eyal
    spec:
      imagePullSecrets:
      - name: myaws
      containers:
      - name: eyal
        image: 517579239930.dkr.ecr.eu-central-1.amazonaws.com/eyal:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
