eyal-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: eyal
  labels:
    app: eyal
spec:
  selector:
    app: eyal
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: LoadBalancer
