eyal-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: eyal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: eyal1.elsolo.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eyal
            port:
              number: 8090
